--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 
 #BIN RANGE URLs
-url.binrange=https://<host>/v2/binrange
-url.binrange.json=https://<host>/v2/binrange/json
+url.binrange=http://localhost:9090/v2/binrange
+url.binrange.json=http://localhost:9090/v2/binrange/json
 
 #Rest Api Test URLs
 url.apitest=https://reqres.in/api/users
+
