--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>shreyas-apis</artifactId>
+    <artifactId>spring-consuming-rest-api</artifactId>
     <version>0.1.0</version>
 
     <parent>
