--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 
-#BIN RANGE URLs
-url.binrange=http://localhost:9090/v2/binrange
-url.binrange.json=http://localhost:9090/v2/binrange/json
+# Authorization configuration
+t360.config.authorization=Intuit_IAM_Authentication intuit_appid="Intuit.psd.ihub.cdmtest", intuit_app_secret="iDqj5uNzrHhhjEqcQWE45e", intuit_token_type="IAM-Ticket", intuit_token="V1-178-Q31333734760637d801c10", intuit_userid="214311090", intuit_realmid="112981037", intuit_version="1.0", intuit_app_token="bkm7af4d5kym5abjxwxqsd3f6kts"
+t360.config.client_user_id=IHUBCI
+t360.config.intuit_tid=1924742091914F91967D99E97FE51EA1
+t360.config.PayloadIsEncrypted=CLEAR_TEXT
 
-#Rest Api Test URLs
-url.apitest=https://reqres.in/api/users
+# localhost URLS
+url.bin.range=http://localhost:9090/v2/binrange
+
 
