--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,19 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-consuming-rest-api</artifactId>
+    <groupId>org.lauer.3lof</groupId>
+    <artifactId>lauer-consuming-rest-api</artifactId>
     <version>0.1.0</version>
-
+    
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.3.RELEASE</version>
     </parent>
+    
+    <properties>
+        <java.version>1.8</java.version>
+    </properties>    
 
     <dependencies>
         <dependency>
@@ -33,11 +37,6 @@
 		  <artifactId>jackson-dataformat-xml</artifactId>
 		</dependency>        
     </dependencies>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
 
     <build>
         <plugins>
