--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,18 @@ t360.config.client_user_id=IHUBCI
 t360.config.intuit_tid=1924742091914F91967D99E97FE51EA1
 t360.config.PayloadIsEncrypted=CLEAR_TEXT
 
-# localhost URLS
-url.bin.range=http://localhost:9090/v2/binrange
-
-
+# AWS Server URLS
+url.bin.range=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/binrange
+url.bin.range.json=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/binrange/json
+url.country.code=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/countrycode
+url.check.images=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/checkimages/aiz723fl
+url.check.images.metadata=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/checkimages/metadata
+url.signature.images=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/checkimages/aiz723fl
+url.batch=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/batch
+url.txn.disposition.cti=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/txnlifecycle/aiz723fl
+url.txn.disposition.cti.list=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/txnlifecycle/aiz723fl
+url.txn.disposition.cti.events=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/txnlifecycle/aiz723fl/events
+url.txn.disposition.cti.events.type=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/txnlifecycle
+url.txn.disposition.batch.events=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/txnlifecycle
+url.transactions.v4=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/txnv4services/companies/1/paymentTransactions
+url.transactions.v4.graphql=http://spring-rest-api.eu-west-1.elasticbeanstalk.com/v2/txnv4services/graphql
